--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
+    "json-server": "^0.16.3",
     "vue": "^2.6.11",
     "vue-router": "^3.4.6",
     "vuex": "^3.5.1"
